fix: Fix wrong positioning
- fixes #253
- fixes #2

--- a/src/VueDatePicker/style/components/_DatepickerMenu.scss
+++ b/src/VueDatePicker/style/components/_DatepickerMenu.scss
@@ -1,5 +1,5 @@
 .dp__menu {
-  position: fixed;
+  position: absolute;
   background: var(--dp-background-color);
   border-radius: $dp__border_radius;
   min-width: $dp__menu_min_width;
