--- a/src/VueDatePicker/style/main.scss
+++ b/src/VueDatePicker/style/main.scss
@@ -63,6 +63,7 @@
   font-family: $dp__font_family;
   user-select: none;
   box-sizing: border-box;
+  position: relative;
 }
 
 .dp__pointer {
